--- a/redis_cluster/docker-compose.redis-cluster.yml
+++ b/redis_cluster/docker-compose.redis-cluster.yml
@@ -1,114 +1,146 @@
 version: '3.8'
 services:
   redis-node-0:
-    build: .
-    image: redis-cluster
+    image: bitnami/redis-cluster
     container_name: redis-node-0
+    restart: always
     networks:
-      - redis
+      mysql_spring:
+        ipv4_address: 172.22.0.100
+    hostname: redis-node-0
     environment:
       - 'REDIS_PORT_NUMBER=7000'
-      - 'REDIS_PASSWORD=redis2021'
+      - 'REDIS_PASSWORD=Lucky2021'
       - 'REDIS_NODES=redis-node-0 redis-node-1 redis-node-2 redis-node-3 redis-node-4 redis-node-5'
       - 'REDIS_CLUSTER_ANNOUNCE_PORT=7000'
       - 'REDIS_CLUSTER_ANNOUNCE_IP=192.168.68.92'
       - 'REDIS_CLUSTER_BUS_ANNOUNCE_PORT=17000'
       - 'REDIS_CLUSTER_DYNAMIC_IPS=no'
     ports:
-      - 7000:7000
-      - 17000:17000
+      - "7000:7000"
+      - "17000:17000"
 
   redis-node-1:
-    build: .
-    image: redis-cluster
+    image: bitnami/redis-cluster
     container_name: redis-node-1
+    restart: always
     networks:
-      - redis
+      mysql_spring:
+        ipv4_address: 172.22.0.101
+    hostname: redis-node-1
     environment:
       - 'REDIS_PORT_NUMBER=7001'
-      - 'REDIS_PASSWORD=redis2021'
+      - 'REDIS_PASSWORD=Lucky2021'
       - 'REDIS_NODES=redis-node-0 redis-node-1 redis-node-2 redis-node-3 redis-node-4 redis-node-5'
       - 'REDIS_CLUSTER_ANNOUNCE_PORT=7001'
       - 'REDIS_CLUSTER_ANNOUNCE_IP=192.168.68.92'
       - 'REDIS_CLUSTER_BUS_ANNOUNCE_PORT=17001'
       - 'REDIS_CLUSTER_DYNAMIC_IPS=no'
     ports:
-      - 7001:7001
-      - 17001:17001
+      - "7001:7001"
+      - "17001:17001"
 
   redis-node-2:
-    build: .
-    image: redis-cluster
+    image: bitnami/redis-cluster
     container_name: redis-node-2
+    restart: always
     networks:
-      - redis
+      mysql_spring:
+        ipv4_address: 172.22.0.102
+    hostname: redis-node-2
     environment:
       - 'REDIS_PORT_NUMBER=7002'
-      - 'REDIS_PASSWORD=redis2021'
+      - 'REDIS_PASSWORD=Lucky2021'
       - 'REDIS_NODES=redis-node-0 redis-node-1 redis-node-2 redis-node-3 redis-node-4 redis-node-5'
       - 'REDIS_CLUSTER_ANNOUNCE_PORT=7002'
       - 'REDIS_CLUSTER_ANNOUNCE_IP=192.168.68.92'
       - 'REDIS_CLUSTER_BUS_ANNOUNCE_PORT=17002'
       - 'REDIS_CLUSTER_DYNAMIC_IPS=no'
     ports:
-      - 7002:7002
-      - 17002:17002
+      - "7002:7002"
+      - "17002:17002"
 
   redis-node-3:
-    build: .
-    image: redis-cluster
+    image: bitnami/redis-cluster
     container_name: redis-node-3
+    restart: always
     networks:
-      - redis
+      mysql_spring:
+        ipv4_address: 172.22.0.103
+    hostname: redis-node-3
     environment:
       - 'REDIS_PORT_NUMBER=7003'
-      - 'REDIS_PASSWORD=redis2021'
+      - 'REDIS_PASSWORD=Lucky2021'
       - 'REDIS_NODES=redis-node-0 redis-node-1 redis-node-2 redis-node-3 redis-node-4 redis-node-5'
       - 'REDIS_CLUSTER_ANNOUNCE_PORT=7003'
       - 'REDIS_CLUSTER_ANNOUNCE_IP=192.168.68.92'
       - 'REDIS_CLUSTER_BUS_ANNOUNCE_PORT=17003'
       - 'REDIS_CLUSTER_DYNAMIC_IPS=no'
     ports:
-      - 7003:7003
-      - 17003:17003
+      - "7003:7003"
+      - "17003:17003"
 
   redis-node-4:
-    build: .
-    image: redis-cluster
+    image: bitnami/redis-cluster
     container_name: redis-node-4
+    restart: always
     networks:
-      - redis
+      mysql_spring:
+        ipv4_address: 172.22.0.104
+    hostname: redis-node-4
     environment:
       - 'REDIS_PORT_NUMBER=7004'
-      - 'REDIS_PASSWORD=redis2021'
+      - 'REDIS_PASSWORD=Lucky2021'
       - 'REDIS_NODES=redis-node-0 redis-node-1 redis-node-2 redis-node-3 redis-node-4 redis-node-5'
       - 'REDIS_CLUSTER_ANNOUNCE_PORT=7004'
       - 'REDIS_CLUSTER_ANNOUNCE_IP=192.168.68.92'
       - 'REDIS_CLUSTER_BUS_ANNOUNCE_PORT=17004'
       - 'REDIS_CLUSTER_DYNAMIC_IPS=no'
     ports:
-      - 7004:7004
-      - 17004:17004
+      - "7004:7004"
+      - "17004:17004"
 
   redis-node-5:
-    build: .
-    image: redis-cluster
+    image: bitnami/redis-cluster
     container_name: redis-node-5
+    restart: always
     networks:
-      - redis
+      mysql_spring:
+        ipv4_address: 172.22.0.105
+    hostname: redis-node-5
     environment:
       - 'REDIS_PORT_NUMBER=7005'
-      - 'REDIS_PASSWORD=redis2021'
+      - 'REDIS_PASSWORD=Lucky2021'
       - 'REDIS_NODES=redis-node-0 redis-node-1 redis-node-2 redis-node-3 redis-node-4 redis-node-5'
       - 'REDIS_CLUSTER_ANNOUNCE_PORT=7005'
       - 'REDIS_CLUSTER_ANNOUNCE_IP=192.168.68.92'
       - 'REDIS_CLUSTER_BUS_ANNOUNCE_PORT=17005'
       - 'REDIS_CLUSTER_DYNAMIC_IPS=no'
     ports:
-      - 7005:7005
-      - 17005:17005
+      - "7005:7005"
+      - "17005:17005"
+
+  redis-cluster-init:
+    image: redis:6.2
+    container_name: redis-cluster-init
+    restart: 'no'
+    networks:
+      mysql_spring:
+        ipv4_address: 172.22.0.106
+    depends_on:
+      - redis-node-0
+      - redis-node-1
+      - redis-node-2
+      - redis-node-3
+      - redis-node-4
+      - redis-node-5
+    entrypoint: []
+    command:
+      - /bin/bash
+      - -c
+      - redis-cli -a Lucky2021 --cluster create 172.22.0.100:7000 172.22.0.101:7001 172.22.0.102:7002 172.22.0.103:7003 172.22.0.104:7004 172.22.0.105:7005 --cluster-replicas 1 --cluster-yes
+
 
 networks:
-  redis:
-    external:
-      name: redis-cluster
+  mysql_spring:
+    external: true
